--- a/pom.xml
+++ b/pom.xml
@@ -60,4 +60,5 @@
         <maven.compiler.target>18</maven.compiler.target>
         <exec.mainClass>com.mycompany.retomapeo.RetoMapeo</exec.mainClass>
     </properties>
+    <name>Entidades</name>
 </project>
