--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,11 @@
         <maven.compiler.target>19</maven.compiler.target>
         <exec.mainClass>banco.itson.edu.persistenciaagenciatransito.PersistenciaAgenciaTransito</exec.mainClass>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.mycompany</groupId>
+            <artifactId>agenciatransito</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
