--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,22 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>banco.itson.edu.agenciatransito.AgenciaTransito</exec.mainClass>
     </properties>
+    <repositories>
+    
+</repositories>
+        <dependencies>
+
+    <dependency>
+     <groupId>org.netbeans.external</groupId>
+    <artifactId>AbsoluteLayout</artifactId>
+    <version>RELEASE210</version>
+</dependency>
+</dependencies>
+
+    
     <name>InterfazAgenciaTransito</name>
 </project>
