--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,19 @@
         <exec.mainClass>banco.itson.edu.agenciatransito.AgenciaTransito</exec.mainClass>
     </properties>
     <repositories>
-    
-</repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
         <dependencies>
-
-    <dependency>
-     <groupId>org.netbeans.external</groupId>
-    <artifactId>AbsoluteLayout</artifactId>
-    <version>RELEASE210</version>
-</dependency>
-</dependencies>
+            <dependency>
+                <groupId>unknown.binary</groupId>
+                <artifactId>AbsoluteLayout</artifactId>
+                <version>SNAPSHOT</version>
+            </dependency>
+        </dependencies>
 
     
     <name>InterfazAgenciaTransito</name>
