--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
-
-        
+        <dependency>
+            <groupId>com.mycompany</groupId>
+            <artifactId>AgenciaTrafico</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
