--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
                 <artifactId>AbsoluteLayout</artifactId>
                 <version>SNAPSHOT</version>
             </dependency>
+                <dependency>
+                        <groupId>com.mycompany</groupId>
+                        <artifactId>AgenciaTrafico</artifactId>
+                        <version>1.0-SNAPSHOT</version>
+                </dependency>
         </dependencies>
 
     
