--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>agenciatransito</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>banco.itson.edu</groupId>
+            <artifactId>PersistenciaAgenciaTransito</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
